// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders primary button style correctly 1`] = `
<button
  className="sc-bdfBwQ eGRlEY"
/>
`;

exports[`renders secondary button style correctly 1`] = `
<button
  className="sc-bdfBwQ cpBHDy"
/>
`;

exports[`renders without button style correctly 1`] = `
<button
  className="sc-bdfBwQ eGRlEY"
/>
`;
